[ci skip]Fix naming errors

--- a/tests/js-tests/src/GUITest/UIWebViewTest/webview.html
+++ b/tests/js-tests/src/GUITest/UIWebViewTest/webview.html
@@ -14,7 +14,7 @@
     Page 1
 </div>
 <div>
-    <a href="weview2.html">goto page2</a>
+    <a href="webview2.html">goto page2</a>
 </div>
 <div id="test"></div>
 </body>
