--- a/tests/js-tests/src/GUITest/UIWebViewTest/webview2.html
+++ b/tests/js-tests/src/GUITest/UIWebViewTest/webview2.html
@@ -14,7 +14,7 @@
     Page 2
 </div>
 <div>
-    <a href="weview.html">goto page1</a>
+    <a href="webview.html">goto page1</a>
 </div>
 <div id="test"></div>
 </body>
